# bvh-RelightableGaussian

./: CMakeLists.txt
src/: bvh.cu  construct.cu  trace.cu
